<resources>
    <string name="app_name">InClass09</string>
    <string name="Login">Login</string>
    <string name="signUp">Sign Up</string>

    <string name="et_email_signup">Email</string>
    <string name="lbl_email_signup">Email</string>
    <string name="lbl_password_signup">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup_signUp">SignUp</string>
    <string name="et_firstName">First Name</string>
    <string name="et_lastName">Last Name</string>
    <string name="et_choosePassword">Choose Password</string>
    <string name="et_repeatPassword">Repeat Password</string>
    <string name="btn_signup_signup">SignUp</string>
    <string name="sendTo">Send To :</string>
    <string name="message">Message :</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="tv_subject">Subject</string>
    <string name="tv_senderName">Sender Name</string>
    <string name="tv_message">Message</string>
    <string name="tv_createdAt">Created At:</string>
    <string name="btn_close">Close</string>
</resources>
